tools/tests/errors/surf_lib_03.experr
JSON parse error
expected string key
